<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InstructionFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/shoe_store_picture"
            android:scaleType="centerCrop"
            android:src="@drawable/shoe_store_background" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/fragment_horizontal_margin">

            <TextView
                android:id="@+id/instructionsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:shadowColor="@color/secondaryTextColor"
                android:text="@string/instructions"
                android:textColor="@color/primaryDarkColor"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:lineSpacingExtra="10dp"
                android:shadowColor="@android:color/white"
                android:shadowRadius="2.5"
                android:text="@string/instructions_text"
                android:textColor="@color/secondaryDarkColor"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/instructionsTitle" />

            <Button
                android:id="@+id/ShowShoes"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="64dp"
                android:background="@drawable/rounded_corner"
                android:text="@string/show_me_the_shoes"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>